# drfBegin

./: .editorconfig  Makefile  README.md  manage.py  pyproject.toml  qodana.yaml  test_api.http
app_posts/: models.py  serializers.py  views.py
app_posts/migrations/: 0001_initial.py
drfBegin/: asgi.py  settings.py  urls.py  wsgi.py
