[tool.poetry]
name = "drfbegin"
version = "0.1.0"
description = ""
authors = ["vikornienko <vikornienko76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
